conformance/tests/grpcroute-request-header-modifier.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-request-header-modifier
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Header-Set
          value: set-overwrites-values
    backendRefs:
    - name: grpc-infra-backend-v1
      port: 8080
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: X-Header-Add
          value: add-appends-values
    backendRefs:
    - name: grpc-infra-backend-v1
      port: 8080
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        remove:
        - X-Header-Remove
    backendRefs:
    - name: grpc-infra-backend-v1
      port: 8080
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: EchoTwo
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Header-Set-1
          value: header-set-1
        - name: X-Header-Set-2
          value: header-set-2
        add:
        - name: X-Header-Add-1
          value: header-add-1
        - name: X-Header-Add-2
          value: header-add-2
        remove:
        - X-Header-Remove-1
        - X-Header-Remove-2
    backendRefs:
    - name: grpc-infra-backend-v2
      port: 8080
